--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "ts": "vue-tsc --build --force"
   },
   "dependencies": {
+    "@iconify-json/heroicons": "^1.2.2",
     "@unhead/vue": "^1.11.20",
+    "break_infinity.js": "^2.2.0",
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
