--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@vue/eslint-config-typescript": "^14.5.0",
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.7.0",
+    "canvas": "^3.1.0",
     "cssnano": "^7.0.6",
     "eslint": "^9.22.0",
     "eslint-plugin-playwright": "^2.2.0",
@@ -53,6 +54,7 @@
     "unplugin-auto-import": "^19.1.1",
     "unplugin-vue-components": "^28.4.1",
     "vite": "^6.2.0",
+    "vite-plugin-pwa": "^0.21.1",
     "vite-plugin-vue-devtools": "^7.7.2",
     "vitest": "^3.0.7",
     "vue-tsc": "^2.2.8",
