--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@iconify-json/heroicons": "^1.2.2",
     "@unhead/vue": "^1.11.20",
+    "@vueuse/core": "^13.0.0",
     "break_infinity.js": "^2.2.0",
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
