--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite-ts-tailwind-starter",
+  "name": "idle-ant-colony-v2",
   "version": "8.0.0",
   "type": "module",
   "scripts": {
