--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "break_infinity.js": "^2.2.0",
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
+    "vue-gtag-next": "^1.14.0",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
